--- a/style/feed.css
+++ b/style/feed.css
@@ -27,11 +27,12 @@ nav {
   position: fixed;
 }
 
+
 .bar {
   margin: 0 auto;
   width: 935px;
   display: flex;
-  justify-content: space-between;
+  justify-items: center;
   align-items: center;
   padding: 5px 0;
 }
@@ -41,6 +42,11 @@ nav {
   height: 43px;
 }
 
+.search {
+  width: 800px;
+  display: flex;
+  justify-content: center;
+}
 
 .search-input {
   width: 215px;
@@ -56,6 +62,7 @@ nav {
   line-height: 18px;
   letter-spacing: 0.5px;
 }
+
 
 .icons {
   display: flex;
